0.4 Khoá endpoint public (B8)
DoD: /api/ticket/summary/excel: không token → 401 do Spring Security trả (không phải interceptor); token CUSTOMER/DRIVER/COLLECTOR → 403; token ADMIN → 200. Kiểm bằng TicketExcelSecurityChainTest (chạy qua reactor: mvn -f ticket-system/pom.xml -pl manage-revenue-ticket -am test)
Scope: S1, S2, S3, S4 done (S5 manual curl replaced by automated test) — see .claude/docs/review/0.4-lock-public-endpoints.md
Mixed files:
- SecurityConfig.java — also contains earlier uncommitted rewrite of the permitAll rules (HEAD had "/**".permitAll())
- JwtAuthFilter.java — also contains earlier uncommitted work: role taken from JWT instead of hardcoded ADMIN, System.out and AccessDeniedException catch removed
- TicketController.java — also contains task 0.5: @RoleRequired(ADMIN) on addTicket, updateTicket, getTicketSummaryByBusAndTime
- JwtAuthFilterTest.java — the file itself is earlier uncommitted work (test for the JWT-role fix)
Not self-contained: relies on uncommitted pom.xml (Testcontainers), AuthInterceptor, RoleRequired, GlobalExceptionHandler, task 0.3 Flyway setup and mockito-extensions.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>